53) Fix /proc/cpuinfo SoC type detect. Detect 2880/3052(3050)/3883(3662)/3350/3352/6855 RT chips.<br>
54) If defined CONFIG_USB_STORAGE install optware-install.sh script to image.<br>
55) uClibc always use large file mode for fopen function (8mB usb devices).<br>
56) samba3 always use large file mode.<br>
57) SpeedUp generate new mac adresses.<br>
58) Remove upnp support from transmission. Save mem and cpu ticks.<br>
59) Add RemoteTelnet and RemoteFTP variable for disable/enable FTP/Telnet services (need add in webUI Miscellaneous default disabled).<br>
60) CONFIG_FDISK_SUPPORT_LARGE_DISKS set by default for USB devices.<br>
61) rewrite automount.sh, now correct mount ext*/fat/ntfs and swap particions.<br>
62) Support auto mount optware by label(for automount particion label need set to optware).<br>
63) FIx use file offset=64 in uClibc.<br>
64) Always use PATHs and variables from /etc/profile.<br>
65) Add nvram variable torrent_home used for home download directory(default /media/sda1).<br>
66) Add in /etc/profile variables needed for transmissions.<br>
67) Umount all filesystem at reboot from goahead if CONFIG_USER_STORAGE is set.<br>
68) Try samba3 fix show free space size.<br>
69) Add pinger (lan/wifi/uplink) for wake up client devices and support uplink connections always on-line(ping_check_on/ping_check_time/
	ping_check_interval variables on nvram. Need add in watchdog section WebUI).<br>
70) Fix /media and /opt mount.<br>
71) Fix client direct to dns mode.<br>

<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://sadnet.ru">sadnet.ru - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please send sfstudio[at]mail.ru</b>
<br>
<br>
<br>