@@ -600,6 +600,8 @@
 	ping_check_interval variables on nvram. Need add in watchdog section WebUI).<br>
 70) Fix /media and /opt mount.<br>
 71) Fix client direct to dns mode.<br>
+72) Check size /var/udhcpd.leases in pinger.sh.<br>
+73) Need restart dhcp server at samba apply change.<br>
 
 <br><br>
 <b>For support see:</b><br>
